trying to fix overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   background-color: rgba(25, 25, 25, 1);
   color: wheat;
   user-select: none;
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
   overflow: hidden;
 }
 
